<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/register_wrapper"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              tools:context=".unauthorized.RegisterActivity"
              android:paddingStart="@dimen/row_size"
              android:paddingEnd="@dimen/row_size">

    <!-- Register progress -->
    <ProgressBar
            android:id="@+id/register_progress"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/rotating_sand_clock_48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>

    <ScrollView
            android:id="@+id/register_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_marginTop="@dimen/row_size"
                android:id="@+id/email_register_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/row_size">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/row_size"
                    android:orientation="horizontal">
                <TextView
                        android:text="@string/prompt_email"
                        android:layout_width="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@android:color/holo_blue_dark"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:layout_marginEnd="@dimen/row_size"/>
                <EditText
                        android:id="@+id/register_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        android:background="@null"
                        android:maxLines="1"
                        android:textColor="@android:color/holo_blue_dark"
                        android:singleLine="true"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/row_size"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/row_size">
                <TextView
                        android:text="@string/prompt_password"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/holo_blue_dark"
                        android:layout_marginEnd="@dimen/row_size"/>
                <EditText
                        android:id="@+id/register_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:imeActionId="6"
                        android:textColor="@android:color/holo_blue_dark"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:background="@null"
                        android:maxLines="1"
                        android:singleLine="true"/>
            </LinearLayout>

            <Button
                    android:id="@+id/register_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/row_size"
                    android:layout_marginTop="@dimen/row_size"
                    android:background="@null"
                    android:textSize="20sp"
                    android:fontFamily="serif-monospace"
                    android:textAllCaps="false"
                    android:textColor="@android:color/holo_blue_dark"
                    android:text="@string/action_register_short"
                    android:layout_marginEnd="8dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>