<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".NewPlanActivity"
        android:paddingEnd="@dimen/row_size"
        android:paddingStart="@dimen/row_size">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="@dimen/row_size"
                  android:layout_marginTop="@dimen/row_size"
                  android:orientation="horizontal">

        <TextView
                android:id="@+id/new_plan_anonymous_text"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="@dimen/row_size"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:text="@string/anonymous_text"/>
        <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            <ImageView
                    android:id="@+id/new_plan_anonymous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:src="@drawable/ic_square_24dp"
                    android:rotation="-3"
                    android:contentDescription="@string/anonymous_text"/>

        </FrameLayout>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="@dimen/row_size"
                  android:layout_marginTop="@dimen/row_size"
                  android:orientation="horizontal">

        <TextView
                android:id="@+id/new_plan_public_text"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:layout_height="@dimen/row_size"
                android:textSize="16sp"
                android:textColor="@android:color/holo_blue_dark"
                android:text="@string/public_text"/>
        <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            <ImageView
                    android:id="@+id/new_plan_public"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:src="@drawable/ic_square_24dp"
                    android:rotation="-1"
                    android:contentDescription="@string/public_text"/>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/row_size"
            android:baselineAligned="false">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/row_size"
                android:layout_marginEnd="8dp">

            <EditText
                    android:id="@+id/add_item"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/row_size"
                    android:inputType="text"
                    android:background="@null"
                    android:maxLines="1"
                    android:textColor="@android:color/holo_blue_dark"
                    android:singleLine="true"
                    android:textColorHint="@android:color/holo_blue_light"
                    android:hint="@string/gift"
                    android:importantForAutofill="no"
                    tools:ignore="UnusedAttribute"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/items_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/row_size"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/row_size">

            <EditText
                    android:id="@+id/add_invite"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/row_size"
                    android:inputType="text"
                    android:background="@null"
                    android:maxLines="1"
                    android:textColor="@android:color/holo_blue_dark"
                    android:singleLine="true"
                    android:textColorHint="@android:color/holo_blue_light"
                    android:hint="@string/gift"
                    android:importantForAutofill="no" tools:targetApi="o"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/invite_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/row_size"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>